Sat Jun 26 11:07:20 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (aix): -b must come at the start of the command line,
	  and -e must not appear while testing libraries.  [ruby-talk:104501]

	* lib/mkmf.rb (find_header, dir_config): quote directory names if
	  necessary.  [ruby-talk:104505]

Sat Jun 26 00:13:08 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_fopen, rb_fdopen, rb_io_reopen): setvbuf() may return
	  positive value on failure.  [ruby-dev:23792]

Fri Jun 25 18:07:15 2004  Michal Rokos  <michal@ruby-lang.org>

	* gc.c: bring back _stklen for DJGPP [ruby-core:3084]

Fri Jun 25 15:33:01 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/extconf.rb: check stricter.  [ruby-talk:104501]

Fri Jun 25 01:58:01 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* {bcc32,win32,wince}/setup.mak: remove RUBY_EXTERN lines when
	  including version.h. [ruby-talk:104456]

Thu Jun 24 14:23:29 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_fread): return already read data when system call is
	  interrupted.  [ruby-talk:97206]

Thu Jun 24 01:25:21 2004  Shugo Maeda  <shugo@ruby-lang.org>

	* version.h: added declarations of ruby_version,
	ruby_release_date, ruby_platform.

Thu Jun 24 01:07:15 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/socket/socket.c (sock_sockaddr): Socket#gethostbyname()
	  should give us packed address, not struct sockaddr.
	  [ruby-core:03053]

Wed Jun 23 22:19:10 2004  Dave Thomas  <dave@pragprog.com>

	* ext/socket/socket.c (sock_s_gethostbyaddr): Work around problem
	  with OS X not returning 'from' parameter to recvfrom for
	  connection-oriented sockets.

Wed Jun 23 22:16:16 2004  Michal Rokos  <michal@ruby-lang.org>

	* io.c: io_seek()'s retval should be checked [ruby-core:03045]

Wed Jun 23 21:48:27 2004  Michal Rokos  <michal@ruby-lang.org>

	* time.c: Fix indentation.

	* main.c: Remove _stklen, and _CRT_glob. Move _stacksize for
	  __human68k__ to gc.c where the others are.
