@@ -1,3 +1,8 @@
+Sat Jun 26 15:17:11 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* variable.c (rb_mod_class_variables): class variables are no longer
+	  inherited.  [ruby-dev:23808]
+
 Sat Jun 26 11:07:20 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in (aix): -b must come at the start of the command line,
